<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">King</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activityinitdetails_TeacherIDLabel">Teacher ID</string>
    <string name="activityinitdetails_TeacherIDHint">mary.howard@abc.com</string>
    <string name="activityinitdetails_StudentIDLabel">Student ID</string>
    <string name="activityinitdetails_StudentIDValue">john@ddmmyy</string>
    <string name="activityinitdetails_button_findaddress">Get Student Current Address</string>
    <string name="activityinitdetails_button_Set">Set Details</string>
    <string name="activityinitdetails_Label">Initial Details Setup</string>
    <string name="activityinitdetails_hint_studentaddress">This Student address value is pulled from Salesforce and a Teacher can edit it.</string>
    <string name="title_activity_session_details">SessionDetails</string>
    <string name="activitybasicinfo_label">Basic Information </string>
    <string name="activitybasicinfoCont_label">Basic Information Cont</string>
    <string name="activitybasicinfo_textview_TeacherName">"Teacher Name : "</string>
    <string name="activitybasicinfo_textview_StudentNameLabel">"Student Name : "</string>
    <string name="InstrumentNameLabel">Instrument Name :</string>
    <string name="LessonStartTimeLabel">"Lesson Start Time : "</string>
    <string name="LessonEndTimeLabel">Lesson End Time :</string>
    <string name="NextPage">Next Page</string>
    <string name="title_activity_session_basic_info_cont">SessionBasicInfo Cont</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="title_activity_session_mechanics">SessionMechanics</string>
    <string name="title_activity_session_mechanics_activity_cont">SessionMechanics Cont</string>
    <string name="title_activity_session_life_skills_progress">Session LifeSkillsProgress</string>
    <string name="title_home_page">TeachCron</string>
    <string name="title_activity_session_logs">Drafted logs</string>

    <string name="play_services_dialog_cancel_toast">Google Play Services will help conserve your battery!</string>
    <string name="gps_provider_disabled">GPS Location Services are unavailable!</string>
    <string name="network_provider_disabled">Network Location Services are unavailable!</string>
    <string name="both_gps_and_network_disabled">GPS and Network Location Services are both unavailable!</string>
    <string name="enable_background_scanning">Please enable background scanning!</string>
    <string name="enable_wifi">Please enable wifi for accurate locations!</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
</resources>
