<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InitDetailsActivity" >

    <TextView
        android:id="@+id/activityinitdetails_textview_TeacherIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/activityinitdetails_TeacherIDLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/activityinitdetails_edittext_TeacherUserNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/activityinitdetails_textview_TeacherIDLabel"
        android:layout_below="@+id/activityinitdetails_textview_TeacherIDLabel"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/activityinitdetails_TeacherIDHint" >

    </EditText>

    <TextView
        android:id="@+id/activityinitdetails_textview_StudentIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activityinitdetails_edittext_TeacherUserNameValue"
        android:layout_marginTop="20dp"
        android:text="@string/activityinitdetails_StudentIDLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <MultiAutoCompleteTextView
        android:id="@+id/MultiAutoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/activityinitdetails_textview_StudentIDLabel"
        android:layout_below="@+id/activityinitdetails_textview_StudentIDLabel"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/activityinitdetails_StudentIDValue">

    </MultiAutoCompleteTextView>

    <Button
        android:id="@+id/activityinitdetails_button_FindStudentAddress"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/MultiAutoCompleteTextView1"
        android:layout_below="@+id/MultiAutoCompleteTextView1"
        android:layout_marginTop="10dp"
        android:text="@string/activityinitdetails_button_findaddress" />

    <EditText
        android:id="@+id/activityinitdetails_edittext_StudentCurrentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/activityinitdetails_button_FindStudentAddress"
        android:layout_alignRight="@+id/MultiAutoCompleteTextView1"
        android:layout_below="@+id/activityinitdetails_button_FindStudentAddress"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/activityinitdetails_hint_studentaddress"
        android:inputType="textMultiLine" >
        
    </EditText>

    <Button
        android:id="@+id/activityinitdetails_button_SetDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/activityinitdetails_edittext_StudentCurrentAddress"
        android:layout_below="@+id/activityinitdetails_edittext_StudentCurrentAddress"
        android:layout_marginTop="20dp"
        android:text="@string/activityinitdetails_button_Set" />

</RelativeLayout>
