<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SessionBasicInfoActivity"
    tools:ignore="TextFields" >

   
    <TextView
        android:id="@+id/activitysessionbasicinfo_textview_TeacherNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/activitybasicinfo_textview_TeacherName"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activitybasicinfo_edittext_TeacherNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activitysessionbasicinfo_textview_TeacherNameLabel"
        android:layout_below="@+id/activitysessionbasicinfo_textview_TeacherNameLabel"
        android:ems="10"
        tools:ignore="TextFields" >

    </EditText>

    <TextView
        android:id="@+id/activitybasicinfo_textview_StudentNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activitybasicinfo_edittext_TeacherNameValue"
        android:layout_below="@+id/activitybasicinfo_edittext_TeacherNameValue"
        android:layout_marginTop="12dp"
        android:text="@string/activitybasicinfo_textview_StudentNameLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activitybasicinfo_edittext_StudentNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activitybasicinfo_textview_StudentNameLabel"
        android:ems="10" >
    </EditText>
	
    <TextView
        android:id="@+id/activitybasicinfo_textview_InstrumentNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activitybasicinfo_edittext_StudentNameValue"
        android:layout_below="@+id/activitybasicinfo_edittext_StudentNameValue"
        android:layout_marginTop="12dp"
        android:text="@string/InstrumentNameLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activitybasicinfo_edittext_InstrumentNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activitybasicinfo_textview_InstrumentNameLabel"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/activitybasicinfo_textview_LessonStartTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activitybasicinfo_edittext_InstrumentNameValue"
        android:layout_below="@+id/activitybasicinfo_edittext_InstrumentNameValue"
        android:layout_marginTop="12dp"
        android:text="@string/LessonStartTimeLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activitybasicinfo_edittext_LessonStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activitybasicinfo_textview_LessonStartTimeLabel"
        android:layout_below="@+id/activitybasicinfo_textview_LessonStartTimeLabel"
        android:ems="10" >
    </EditText>

    <ImageButton
        android:id="@+id/activitybasicinfo_CalenderImage_StartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/activitybasicinfo_edittext_LessonStartTime"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/activitybasicinfo_edittext_LessonStartTime"
        android:layout_toRightOf="@+id/activitybasicinfo_edittext_LessonStartTime"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/activitybasicinfo_textview_LessonEndTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activitybasicinfo_edittext_LessonStartTime"
        android:layout_below="@+id/activitybasicinfo_edittext_LessonStartTime"
        android:layout_marginTop="12dp"
        android:text="@string/LessonEndTimeLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activitybasicinfo_edittext_LessonEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activitybasicinfo_textview_LessonEndTimeLabel"
        android:layout_alignRight="@id/activitybasicinfo_edittext_LessonStartTime"
        android:layout_below="@+id/activitybasicinfo_textview_LessonEndTimeLabel"
        android:ems="10" >
    </EditText>

    <ImageButton
        android:id="@+id/activitybasicinfo_CalenderImage_EndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/activitybasicinfo_edittext_LessonEndTime"
        android:layout_alignLeft="@+id/activitybasicinfo_CalenderImage_StartTime"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/activitybasicinfo_edittext_LessonEndTime"
        android:layout_toRightOf="@+id/activitybasicinfo_edittext_LessonEndTime"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/activitybasicinfo_button_NextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/activitybasicinfo_CalenderImage_EndTime"
        android:layout_below="@+id/activitybasicinfo_edittext_LessonEndTime"
        android:layout_marginTop="20dp"
        android:text="@string/NextPage" />
    
</RelativeLayout>
</LinearLayout>
    </ScrollView>
